# mytodos

./: .gitignore  .gitmsg  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backend/src-tauri/: Cargo.toml  tauri.conf.json
backend/src-tauri/.cargo/: config.toml
backend/src-tauri/icons/: icon.icns
backend/src-tauri/src/: config.rs  lib.rs  log_helper.rs  main.rs
backend/src-tauri/src/commands/: gist.rs  mod.rs  release.rs  secure_store.rs
doc/: 0-Prompt提示词.md  1-SRS需求.md  2-PRD设计.md  3-TEST测试用例.md
doc/superpowers/plans/: 2026-05-02-mytodos-implementation.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  vite-env.d.ts
frontend/src/router/: index.ts
patches/tao-0.35.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
scripts/: create-icons.cjs
scripts/android-permission-sign/: AndroidManifest.xml  build.gradle.kts
scripts/linux/: build_bylinux.sh
scripts/macos/: _common.sh  build_macos.sh  install_android_sdk_macos.sh  install_base_tools_macos.sh  install_c_compile_macos.sh  remove_android_sdk_macos.sh  remove_c_compile_macos.sh
scripts/windows/: InsertSandbox.bat  _common.ps1  build_bywin.ps1  build_windows_bywin.ps1  install_1_base_tools_bywin.ps1  install_2_c_compile_bywin.ps1  install_3_rust_bywin.ps1  install_4_android_sdk_bywin.ps1  ps_debug.md  remove_1_android_sdk_bywin.ps1  remove_2_rust_bywin.ps1  remove_3_c_compile_bywin.ps1  sandbox学习.md  提示词.md
src/types/: index.ts
src/views/: GuideView.vue
(+50 files in other folders)
